--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 
 streamlit==1.38.0
 beautifulsoup4==4.12.3
-lxml==5.2.1
 requests==2.32.3
 scikit-learn==1.4.2
 scipy==1.13.1
 numpy==1.26.4
 pdfminer.six==20231228
-python-docx==1.1.2
+mammoth==1.6.0
+openai==1.51.2
